--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==2.0.12
 colorama==0.4.3
 cryptography==40.0.1
 Django==4.1.7
+django-filter==22.1
 django-tables2==2.5.3
 docker==4.4.4
 docker-compose==1.25.5
