--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ cffi==1.15.1
 charset-normalizer==2.0.12
 colorama==0.4.3
 cryptography==40.0.1
+defusedxml==0.7.1
 Django==4.1.7
+django-allauth==0.54.0
 django-filter==22.1
 django-tables2==2.5.3
 docker==4.4.4
@@ -22,15 +24,19 @@ docopt==0.6.2
 idna==3.4
 jmespath==1.0.1
 jsonschema==3.2.0
+oauthlib==3.2.2
 paramiko==3.1.0
 pathspec==0.10.1
 psycopg2-binary==2.9.5
 pycparser==2.21
+PyJWT==2.6.0
 PyNaCl==1.5.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python3-openid==3.2.0
 PyYAML==5.4.1
 requests==2.26.0
+requests-oauthlib==1.3.1
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.3
