--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ awsebcli==3.20.5
 backports.zoneinfo==0.2.1
 bcrypt==4.0.1
 blessed==1.20.0
+boto3==1.26.81
 botocore==1.29.81
 cached-property==1.5.2
 cement==2.8.2
@@ -16,6 +17,7 @@ defusedxml==0.7.1
 Django==4.1.7
 django-allauth==0.54.0
 django-filter==22.1
+django-storages==1.13.2
 django-tables2==2.5.3
 docker==4.4.4
 docker-compose==1.25.5
@@ -37,6 +39,7 @@ python3-openid==3.2.0
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.3
