--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: issuePeople.wsgi:application
+  aws:elasticbeanstalk:application:environment:
+    DEBUG: "False"
