--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-allauth==0.54.0
 django-filter==22.1
 django-storages==1.13.2
 django-tables2==2.5.3
+djangorestframework==3.14.0
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
@@ -36,6 +37,7 @@ PyNaCl==1.5.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python3-openid==3.2.0
+pytz==2023.3
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.1
