--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.0.12
 colorama==0.4.3
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==40.0.1
 defusedxml==0.7.1
 Django==4.1.7
@@ -24,10 +26,16 @@ docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+drf-yasg==1.21.5
 idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
 jmespath==1.0.1
 jsonschema==3.2.0
+MarkupSafe==2.1.2
 oauthlib==3.2.2
+packaging==23.1
 paramiko==3.1.0
 pathspec==0.10.1
 psycopg2-binary==2.9.5
@@ -41,12 +49,15 @@ pytz==2023.3
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 s3transfer==0.6.0
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.3
 termcolor==1.1.0
 texttable==1.6.7
+uritemplate==4.1.1
 urllib3==1.26.15
 wcwidth==0.1.9
 websocket-client==0.59.0
