--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cryptography==40.0.1
 defusedxml==0.7.1
 Django==4.1.7
 django-allauth==0.54.0
+django-cors-headers==3.14.0
 django-filter==22.1
 django-storages==1.13.2
 django-tables2==2.5.3
